--- a/src/front/styles/carrouselDash.scss
+++ b/src/front/styles/carrouselDash.scss
@@ -5,14 +5,11 @@
     box-sizing: border-box;
 }
 
-.cardgrouped{
-    margin: auto;
-    justify-content: space-around;
-    width: fit-content;
-    
-    
-    
-}
+// .cardgrouped{
+//     margin: auto;
+//     justify-content: space-around;
+//     width: fit-content;
+// }
 
 
 
@@ -25,15 +22,7 @@
     align-items: center;
 }
 
-.img-hotel{
-    max-width: 100%;
-    min-width: 100px;
-    width: 40em;
-    height: 20em;
-    border-radius: 20px;
-    margin-top: 50px;
-    margin-left: 70px; 
-}
+
 
 .item-image img {
     max-width: 100%;
