--- a/src/front/styles/footer.scss
+++ b/src/front/styles/footer.scss
@@ -3,7 +3,7 @@
 .footerFondo{
     background-image: linear-gradient(180deg, rgba(139, 217, 150, 0.7) 39.51%, rgba(121, 139, 242, 0.7) 100%);;
     padding-top: 60px;
-    margin-top: 6rem;
+    // margin-top: 6rem;
     background-repeat: none;
     background-size: cover;
 }
