--- a/src/front/styles/userDash.scss
+++ b/src/front/styles/userDash.scss
@@ -16,7 +16,18 @@
 
 
 
-.contentUser{
+.contentUser{ 
+    
+    position: static;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+    
+}
+
+
+.contentUser2{
+    margin-top: 2%;
+    margin-left: 2%;
     position: static;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
     border-radius: 20px;
