carousel home backrgroun 07/10

--- a/src/front/styles/home/homeBackground.scss
+++ b/src/front/styles/home/homeBackground.scss
@@ -1,7 +1,30 @@
+.active, .dot:hover{
+  background-color: none !important
+}
 .padding-left{
   padding-left: 20px;
 }
 
+.whiteBack{
+  .active, .dot:hover{
+    background-color: transparent;
+  }
+  background: white;
+    background-size: cover;
+    justify-content: center;
+    background-color: transparent;
+    
+}
+.headerInverse{
+  .active, .dot:hover{
+    background-color: transparent;
+  }
+  background: linear-gradient(180deg, #b7bfe7 0%,  #8BD996 100%) no-repeat center;
+    background-size: cover;
+    justify-content: center;
+    background-color: transparent;
+    
+}
 .header {
     background: linear-gradient(180deg, #8BD996 0%, #b7bfe7 100%) no-repeat center;
     background-size: cover;
