--- a/src/front/styles/provincias.scss
+++ b/src/front/styles/provincias.scss
@@ -20,7 +20,7 @@
     flex-direction: column;
     flex: 1;   
     min-width: 200px;
-    max-width: 600px;    
+    // max-width: 600px;    
     margin: 10px 9px;
     box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.1);
    
