--- a/src/front/styles/quehacemos.scss
+++ b/src/front/styles/quehacemos.scss
@@ -8,7 +8,7 @@
     height: 100vh;
 }
 .headerHacemosImg {
-    background-image: url(../img/hacemosfondo.svg);
+    background-image: url(../img/hacemosfondo.png);
     background-repeat: no-repeat;
     background-size: contain;
     object-fit: contain;
