--- a/src/front/styles/paymentGateway.scss
+++ b/src/front/styles/paymentGateway.scss
@@ -7,12 +7,20 @@
     
     background-color: #68AEB6;
     color: white;
+    
 }
 .PaymentGateway{
     display: inline-block;
     margin-top: 50px;
     margin-left: 80px;
     margin-right: 80px;
+    margin-bottom: 50px;
+}
+@media (max-width: 375px){
+    .PaymentGateway{
+        display: contents;
+        margin-top: 50em;       
+        margin-bottom: 50px;}
 }
 .country-name{
     color: black;
