--- a/src/front/styles/provincias.scss
+++ b/src/front/styles/provincias.scss
@@ -8,7 +8,7 @@
     border-radius: 20px;
     margin-top: 1em;
     width: 100%;
-    min-width: 300px;
+    // min-width: 300px;
     height: calc(100% - 30px);
     object-fit: fill;  
 
