--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -135,15 +135,15 @@
     margin:auto;
     top: -15em;
     padding-left: 2em; 
-    height: 8em;  
-    width: 110rem;
+    // height: 8em;  
+    // width: 110rem;
     border-radius: 120px;       
 }
 
 .form-signin{
-  display: inline-block;
+  // display: inline-block;
   padding-top: 1%;
-  font-size: 120%;
+  // font-size: 120%;
   
   
 }
@@ -177,22 +177,22 @@
 
 
 .btton{
-  width: 14%;
-  height: 5em;
+  width: 16%;
+  height: 4em;
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
   border-bottom-left-radius: 50px;
   display: flex;
   float: right;
-  position: relative;
-  top: -5.5em;
+  // position: relative;
+  // top: -5.5em;
   //left: 7em;
-  right:-8em;
+  // right:-8em;
   align-items: center;
   justify-content: center;
   font-weight: 700;  
-  font-size: 60%;
+  // font-size: 60%;
   
 }
 .botonMargin{
@@ -260,10 +260,11 @@
 }
 
 .bgcolor-searchBar{
-    padding-bottom: 2% ;
+   
+    padding-bottom: 1% ;
     margin-left: 0.75%;
-    width: fit-content;         
-    font-size: 150%;
+    // width: fit-content;         
+    font-size: 140%;
    
     
 }
@@ -285,7 +286,7 @@ h3, h2{
 }
 .textMargin{
     display: inline-block;
-    padding: 1em;
+    // padding: 1em;
     color: #394273;
     //font-weight: 500;
 }
