--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -340,27 +340,39 @@ h3, h2{
 }
 
 .mapPosition{
-  position: inherit;  
-  width: 40em;
-  height: 60em;   
-  margin-top: 1%;
+  position: absolute;  
+  // width: 40em;
+  height: 50%; 
+  width: 100%;  
+  
    
 }
-@media (max-width: 1024px){
+@media (max-width: 768px){
   .mapPosition{
-    position: initial;
+    display: none;
+  //   position: initial;
     
-    left: 58.2%;
-    height: 42em;
-    width: 31em;
-      }
+  //   left: 58.2%;
+  //   height: 42em;
+  //   width: 31em;
+  //     }
+  //-----------------------
+}}
+@media (max-width: 1024px){
+  // .mapPosition{
+  //   position: initial;
+    
+  //   left: 58.2%;
+  //   height: 42em;
+  //   width: 31em;
+  //     }
   //-----------------------
 }
 @media (max-width: 375px){
-  .mapPosition{
-    position: static;    
+  // .mapPosition{
+  //   position: static;    
     
-    width: 21.7em;}
+  //   width: 21.7em;}
   //-----------------------
 }
 
