--- a/src/front/styles/home.scss
+++ b/src/front/styles/home.scss
@@ -341,48 +341,11 @@ h3, h2{
 }
 
 .mapPosition{
-  position: absolute;  
-  // width: 40em;
-  height: 100%; 
-  width: 100%;  
-  
-   
-}
-@media (max-width: 768px){
-  }
-@media (max-width: 1024px){
-  // .mapPosition{
-  //   position: initial;
-    
-  //   left: 58.2%;
-  //   height: 42em;
-  //   width: 31em;
-  //     }
-  //-----------------------
-}
-@media (max-width: 375px){
-  // .mapPosition{
-  //   position: static;    
-    
-  //   width: 21.7em;}
-  //-----------------------
-}
-@media (max-width: 990px){
-  .listResponsive{
-    margin-top: 19%;
-  }
-   .mapPosition{
-    width: 34%;
-    height:81%;
-    left: 64%;
-    top: 20%;
-    margin: 0px;
-    padding: 0px;
-    position: fixed;
-    overflow: hidden;
-       }
-  
-}
+  position: inherit;  
+ // width: 40em;
+  height: 60em; 
+  width:auto;  
+  margin-top: 1%;}
 
 .moving {
   
@@ -428,4 +391,21 @@ h3, h2{
     top: -35em;
               
   }
+}
+
+@media (max-width: 1024px){
+  .mapPosition{
+    position: initial;
+    left: 58.2%;
+    height: 42em;
+    width: 31em;
+      }
+  //-----------------------
+}
+@media (max-width: 375px){
+  .mapPosition{
+    position: static;    
+
+    width: 21.7em;}
+  //-----------------------
 }
