fixed img hotel

--- a/src/front/styles/home/featured.scss
+++ b/src/front/styles/home/featured.scss
@@ -1,4 +1,7 @@
 //--------------------------------------------------------------
+body{
+  overflow-x: hidden;
+}
 //Destacados----------------------------------------------------
 .inline-div{
     display: inline-flex;
